--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-body{
-    width: 100%;
-    height: 100vh; 
-   overflow: hidden;
-   overflow-y: scroll;
-}
-.app-container{
-    background-color: #FEF2E8;
+.LandingPage, .header-container, .features{
+    background: #FEF2E8;
 }
